work on camera stream

--- a/zeta-bot/templates/index.html
+++ b/zeta-bot/templates/index.html
@@ -29,10 +29,10 @@
     <table>
         <tr>
             <td>
-                <img src="/video_feed/0" alt="Kamera 1 Stream" width="320" height="240">
+                <img src="{{ url_for('video_feed1') }}" alt="Kamera 1 Stream" width="320" height="240">
             </td>
             <td>
-                <img src="/video_feed/1" alt="Kamera 2 Stream" width="320" height="240">
+                <img src="{{ url_for('video_feed2') }}" alt="Kamera 2 Stream" width="320" height="240">
             </td>
         </tr>
         <tr>
